# Copyright © 2010 INRIA.  All rights reserved.
# Copyright © 2010 Cisco Systems, Inc.  All rights reserved.
# See COPYING in top-level directory.

if HWLOC_BUILD_TESTS
if HWLOC_HAVE_LINUX
if HWLOC_HAVE_OPENAT
if HWLOC_HAVE_BUNZIPP
if HWLOC_HAVE_XML
TESTS = test-gather-topology.sh
endif HWLOC_HAVE_XML
endif HWLOC_HAVE_BUNZIPP
endif HWLOC_HAVE_OPENAT
endif HWLOC_HAVE_LINUX
endif HWLOC_BUILD_TESTS
